Complete CSS assignment WITHOUT Box

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,7 @@
 <h1>About Bloccit</h1>
 <p>Created by:  Me</p>
+
+<div class="boxed">
+
+      <%= link_to "JAM3SOCIAL", "http://www.linkedin.com/john-marin", class: "social-btn" %>
+</div>
