--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,11 +12,40 @@ p#index-title {
   color: blue;
 }
 
+.social-btn {
+    width: 78px;
+    border: 1px solid #900;
+    padding: 10px;
+    margin: 0;
+    background: #fee;
+}
+
+box {
+    width: 78px;
+    border: 1px solid #900;
+    padding: 10px;
+    margin: 0;
+    background: #fee;
+}
+
+#box_a { 
+  position: absolute; 
+  top: 10px;
+  right: 10px;
+  bottom: 10px;
+  left: 10px; 
+  background: red; 
+}
+
 .posts {
   border: solid;
   margin: 5px; 
   padding: 5px;
   height: 200px;
+}
+
+.boxed {
+  border: 1px solid green ;
 }
 
 section {
