--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Bloccit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,11 +8,14 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+
+
 <body>
   <div class="container"> 
    <ul class="nav nav-tabs">
-        <li><%= link_to "Home", welcome_index_path %></li>
-        <li><%= link_to "About", welcome_about_path %></li>
+        <li><%= link_to "Bloccit", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
    </ul>
 
 <%= yield %>
