--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,10 @@
 <h1>All Posts</h1>
+
 <% @posts.each do |post| %>
      <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
-         <%= link_to post.titles, post %>
+         <%= link_to post.title, post %>
        </h4>
      </div>
    </div>
