Begin Checkpoint 32 - Associations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,10 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+ .user-info {
+   margin-top: 12px;
+ }
+ 
+ .nav {
+   margin-top: 15px;
+ }
