--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,30 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+ <h1>New Question</h1>
+ 
+ <div class="row">
+   <div class="col-md-4">
+     <p>Guidelines for Questions</p>
+     <ul>
+       <li>No dumb questions.</li>
+       <li>Don't use the letter "A".</li>
+       <li>The incessant use of hashtags will get you banned.</li>
+     </ul>
+   </div>
+   <div class="col-md-8">
+     <%= form_for @question do |f| %>
+       <div class="form-group">
+         <%= f.label :title %>
+         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
+       </div>
+       <div class="form-group">
+         <%= f.label :body %>
+         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+       </div>
+       <div class="form-group">
+         <%= f.submit "Save", class: 'btn btn-success' %>
+       </div>
+        <div class="checkbox">
+         <%= f.submit "Resolved", class: 'btn btn-success' %>
+       </div>
+     <% end %>
+   </div>
+ </div>
