--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,3 +4,16 @@
 
 <p><%= @question.body %></p>
 
+Checkbox code:
+
+<%= f.check_box :resolved, :class => "css_class" %>
+
+CSS code:
+
+<style type="text/css">
+input.css_class
+{
+width: 30px;
+height: 30px;
+}
+</style> 
