questions regarding assignment 29 and 33 (authorization - checkbox)

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,11 +4,8 @@
 
 <p><%= @question.body %></p>
 
-Checkbox code:
+<%= check_box_tag "question", 'true', @question.resolved, :disabled => true %>
 
-<%= f.check_box :resolved, :class => "css_class" %>
-
-CSS code:
 
 <style type="text/css">
 input.css_class
